--- a/www/templates/news-feed.html
+++ b/www/templates/news-feed.html
@@ -5,7 +5,7 @@
         <div class="MainPageMenuTop" style="border-bottom: 8px solid chocolate;">
             <div style="border-bottom: 40px solid #fff;width:100%;height:100%;">
                 <div align="center">
-                    <img src="/img/paseflora-logo.png" class="imp-responsive img-paseflora-logo" style="width:90%;" />
+                    <img src="http://pde.smartmanager.online//Content/Images/paseflora-logo.png" class="imp-responsive img-paseflora-logo" style="width:90%;" />
                 </div>
             </div>
         </div>
