--- a/www/css/style.css
+++ b/www/css/style.css
@@ -48,7 +48,9 @@ body{
 }
 
 
-
+.bar-header{
+	border-bottom: 5px solid #fff !important;
+}
 .header-item{
     height:100% !important;;
 }
@@ -148,7 +150,7 @@ ion-slides{
       background-color: #0094ff;
   }
   .bgColor_1{
-      background-color: #c00a27;
+      background-color: chocolate;
   }
   .bgColor_2{
       background-color: blue;
@@ -208,7 +210,7 @@ ul.products li.product:nth-child(odd) {
     width: 100%;
 }
 button, .button, #scrollUp, .header-v1, .header-v2, .header-v3, .header-v4, .header-v5, .added_to_cart, .header-v1 .stuck, .header-v2 .stuck, .header-v3 .stuck, .header-v4 .stuck, .header-v5 .stuck, input[type="reset"], input[type="submit"], input[type="button"], .dark .create-your-own a, .owl-dots .owl-dot.active, .pizzaro-handheld-footer-bar, .widget_nav_menu .menu li:hover, .related > h2:first-child:after, .upsells > h2:first-child:after, .widget_nav_menu .menu li::after, .section-products .section-title:after, .pizzaro-handheld-footer-bar ul li > a, .banners .banner .caption .banner-price, .section-tabs .nav .nav-item.active a::after, .products-with-gallery-tabs.section-tabs .nav, .section-recent-post .post-info .btn-more:hover, .section-sale-product .price-action .button:hover, .list-no-image-view ul.products li.product::before, .woocommerce-account .customer-login-form h2::after, .section-coupon .caption .coupon-info .button:hover, .page-template-template-homepage-v2 .header-v2 .stuck, .woocommerce-cart .pizzaro-order-steps ul .cart .step, .list-no-image-cat-view ul.products li.product::before, .pizzaro-handheld-footer-bar ul li.search .site-search, .widget.widget_price_filter .ui-slider .ui-slider-handle, .list-no-image-view .products .owl-item > .product::before, .list-no-image-view ul.products li.product .button:hover, .woocommerce-checkout .pizzaro-order-steps ul .cart .step, .woocommerce-cart .cart-collaterals + .cross-sells h2::after, .footer-v1.site-footer .site-address .address li + li::before, .list-no-image-cat-view ul.products li.product .button:hover, .header-v4.lite-bg .primary-navigation .menu > li > a::before, .woocommerce-checkout .pizzaro-order-steps ul .checkout .step, .kc-section-tab.kc_tabs .kc_tabs_nav > .ui-tabs-active > a::after, .list-no-image-view .products .owl-item > .product .button:hover, .page-template-template-homepage-v6 .footer-social-icons ul li a:hover, .list-view.right-sidebar.columns-1 ul.products li.product .button:hover, .products-card .media .media-right ul.products li.product .button:hover, .products-card .media .media-left ul.products li.product .button:hover, .page-template-template-homepage-v6 .primary-navigation > ul > li:hover, .list-view.left-sidebar.columns-1 ul.products li.product .button:hover, .page-template-template-homepage-v6 .secondary-navigation .menu li:hover, .page-template-template-homepage-v6 .secondary-navigation .menu li::after, .page-template-template-homepage-v6 .main-navigation ul.menu ul li:hover > a, .list-view.right-sidebar.columns-1 .products .owl-item > .product .button:hover, .list-view.left-sidebar.columns-1 .products .owl-item > .product .button:hover, .woocommerce-order-received.woocommerce-checkout .pizzaro-order-steps ul .step, .page-template-template-homepage-v6 .main-navigation ul.nav-menu ul li:hover > a, .page-template-template-homepage-v2 .products-with-gallery-tabs.section-tabs .nav, .stretch-full-width .store-locator .store-search-form form .button, .banner.social-block .caption .button:hover, .wpsl-search #wpsl-search-btn, .lite-bg.header-v4 .primary-navigation .menu .current-menu-item > a::before {
-    background-color: #c00a27;
+    background-color: chocolate;
 }
 .list-no-image-cat-view .products .owl-item>.product::before, .list-no-image-cat-view .products li.product::before, .list-no-image-cat-view ul.products .owl-item>.product::before, .list-no-image-cat-view ul.products li.product::before, .list-no-image-view .products .owl-item>.product::before, .list-no-image-view .products li.product::before, .list-no-image-view ul.products .owl-item>.product::before, .list-no-image-view ul.products li.product::before {
     content: counter(customlistcounter) " ";
