--- a/www/templates/menuDetails.html
+++ b/www/templates/menuDetails.html
@@ -18,7 +18,7 @@
         </ion-nav-title>
 
     </ion-nav-bar>
-    <ion-content class="dark list-no-image-view columns-1">
+    <ion-content class="dark list-no-image-view columns-1" style="direction:rtl;">
         <ul class="products ">
             <li ng-repeat="item in ProductDetails.ProductItems" class="product type-product status-publish has-post-thumbnail product_cat-pizza first instock shipping-taxable purchasable product-type-simple addon-product">
                 <div class="product-outer">
